<resources xmlns:xLiff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee Ordering App</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="increment">+</string>
    <string name="zero">0</string>
    <string name="decrement">-</string>
    <string name="order_summary">Order summary</string>
    <string name="display_order_summary" />
    <string name="order">ORDER</string>
    <string name="least_quantity_to_order">You can\'t order less than 1 Coffee</string>
    <string name="name">Name: <xLiff:g id = "name" examples ="Bayo">%S</xLiff:g> </string>
    <string name="include_whipped_cream">Add WhippedCream?</string>
    <string name="include_chocolate">Add Chocolate?</string>
    <string name="quantity_ordered">Quantity:</string>
    <string name="total_price">Total:<xLiff:g id = "price" example = "£50">%S</xLiff:g></string>
    <string name="thank_you">Thanks for your patronage!!!</string>
</resources>
