<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="com.example.android.simpleadapterexample.MainActivity">

        <EditText
            android:id="@+id/add_customer-name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#000" />
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:textColor="#000"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:onClick="increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/increment"/>
            <TextView
                android:id="@+id/View_Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <Button
                android:onClick="decrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="@string/decrement"/>
        </LinearLayout>

        <TextView
            android:id="@+id/View_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/order_summary"/>
        <TextView
            android:id="@+id/Order_Summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/display_order_summary"/>

    <Button
        android:onClick="sumbitOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />
    </LinearLayout>
</ScrollView>